adapted footer message

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,4 +1,7 @@
-    <div class="footer row">
+    <div class="container">
+      <div class="footer row">
+        <div class="clearfix visible-xs-block"></div>
+      
       <div class="col-md-4">
         <p><a href="/contact.html">Contact me</a></p>
       </div>
@@ -9,17 +12,16 @@
         <p>Website powered by <a href="http://urubu.jandecaluwe.com">Urubu</a></p>
       </div>
       
-	  <div class="clearfix visible-xs-block"></div>
+	    <div class="clearfix visible-xs-block"></div>
 	  
       <div class="col-md-8 col-md-offset-2">
       <p><br/>
-      "Randori", "Man Skirt", "manskirt.eu" are trademarks and/or registered trademarks of Randori BV in the Benelux, the European Union and/or other countries.
-      <br/>Unless otherwise noted, all texts and images on this website are property of Philippe Faes and/or Randori BV and are protected by national and international copyright laws.
+        "Randori", "Coaching Shop", "coaching-shop.eu", "coachingshop.eu" are trademarks and/or registered trademarks of Randori BV in the Benelux, the European Union and/or other countries.
+        <br/>Unless otherwise noted, all texts and images on this website are property of Philippe Faes and/or Randori BV and are protected by national and international copyright laws.
       </p> 
       
       </div>
       <div class="col-md-12">
-      <hr/></div>
+        <hr/></div>
+      </div>  
     </div>
-
-
